force-app/main/default/objects/Customer_Transfer__e/Customer_Transfer__e.object-meta.xml
<CustomObject>
    <label>Customer Transfer</label>
    <pluralLabel>Customer Transfers</pluralLabel>
</CustomObject>