force-app/main/default/objects/Customer_Transfer__e/fields/New_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Task_ID__c</fullName>
    <label>New Task ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>