force-app/main/default/objects/Customer_Transfer__e/fields/Target_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Target_Agent_ID__c</fullName>
    <label>Target Agent ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>