force-app/main/default/objects/Customer_Transfer__e/fields/Verification_History_ID__c.field-meta.xml
<CustomField>
    <fullName>Verification_History_ID__c</fullName>
    <label>Verification History ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>